# sharpey

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  biome.json  justfile  mise.toml  package.json  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  tsconfig.base.json
apps/api/: pyproject.toml
apps/api/src/content_mirror_api/: __init__.py
apps/api/tests/: test_smoke.py
apps/edge/: package.json
apps/edge/src/: index.test.ts  index.ts
apps/web/: package.json
apps/web/src/: index.test.ts  index.ts
apps/worker/: pyproject.toml
apps/worker/src/content_mirror_worker/: __init__.py
apps/worker/tests/: test_smoke.py
docs/: design.md
