[project]
name = "content-mirror-api"
version = "0.0.0"
description = "FastAPI Lambda handler for sharpey."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "boto3>=1.35",
    "content-mirror-shared",
]

[tool.uv.sources]
content-mirror-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_mirror_api"]
