[project]
name = "content-mirror-worker"
version = "0.0.0"
description = "Fargate worker: yt-dlp + ffmpeg downloader for sharpey."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "content-mirror-shared",
]

[tool.uv.sources]
content-mirror-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_mirror_worker"]
